# prospect

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.agents/skills/: README.md
.github/workflows/: bench-hard.yml  ci.yml
ara/: PAPER.md
ara/evidence/: README.md  bh001-coverage-return-reanalysis-2026-07-13.md  bridge-control-bc001-2026-07-13.md  oracle-ladder-ol002-2026-07-14.md  validation-2026-07-12.md
ara/logic/: claims.md  concepts.md  problem.md
ara/staging/: observations.yaml
ara/trace/: exploration_tree.yaml  pm_reasoning_log.yaml
artifact-pointers/: MM-009.json
bench/: SHIPPED  __init__.py  __main__.py  calibration.py  envs.py  gates.py  loop.py  runlog.py
bench/bridge_control/: __init__.py  __main__.py  experiment.py  fixture.py  report.py
bench/candidate_landscape/: __init__.py  __main__.py  experiment.py  planner.py
bench/epistemic/: __init__.py  lifecycle.py  maturity.py  problem.py  run_maturity.py  runtime_lane.py
bench/evals/: __init__.py  p0_scaffold.py  p10_external.py  p11_tools.py  p12_vision.py  p13_observation.py  p14_imitation.py  p1_world_model.py  p2_planner.py  p3_replay.py  p3_voe.py  p4_skills.py  p5_options.py  p6_codec.py  p7_continual.py  p8_knowledge.py  p9_ablation.py  p9_generalization.py  p9_integration.py  p9_invariants.py
bench/hard/: __init__.py  __main__.py  curiosity.py  dmc_env.py  eval.py  imitation.py  report.py
bench/multimodal_causal_assay/: __init__.py  __main__.py  decision.py  experiment.py  future_isolation.py  future_isolation_launcher.py  launcher.py  lcv_parent.py  offgrid_sensitivity.py  predictor.py  preparation.py  probe.py  records.py  runtime.py  sandbox.py  score_launcher.py  score_worker.py  scoring.py  supervisor.py  synthetic_controls.py  worker.py
datasets/: README.md  SHA256SUMS
docs/: architecture.md  requirements.md  roadmap.md  runtime-substrate.md  sota-review-2026-07.md  wm001-v1100-confirmation-plan.md  wm001-v1100-operator-runbook.md  wm001-v1100-preformal-test-failure.md  wm001-v1100-prospective-harness-review.json  wm001-v1110-confirmation-plan.md  wm001-v1110-operator-runbook.md  wm001-v1110-prospective-harness-review.json  wm001-v1110-result-free-rehearsal-failure.md  wm001-v1120-binding-schema-failure.md  wm001-v1120-confirmation-plan.md  wm001-v1120-operator-runbook.md  wm001-v1120-prospective-harness-review.json  wm001-v1130-binding-verifier-failure.md  wm001-v1130-confirmation-plan.md  wm001-v1130-operator-runbook.md  wm001-v1130-prospective-harness-review.json  wm001-v1140-confirmation-plan.md  wm001-v1140-development-archive-membership-failure.md  wm001-v1140-operator-runbook.md  wm001-v1140-prospective-harness-review.json  wm001-v1150-confirmation-plan.md  wm001-v1150-formal-invocation-failure.md  wm001-v1150-operator-runbook.md  wm001-v1150-prospective-harness-review.json  wm001-v1160-accepted-binding-rehearsal-failure.md  wm001-v1160-confirmation-plan.md  wm001-v1160-operator-runbook.md  wm001-v1160-prospective-harness-review.json  wm001-v1170-confirmation-plan.md  wm001-v1170-independent-rehearsal-verifier-failure.md  wm001-v1170-operator-runbook.md  wm001-v1170-prospective-harness-review.json  wm001-v1180-confirmation-plan.md  wm001-v1180-formal-audit-timeout.md  wm001-v1180-operator-runbook.md  (+32 more)
tasks/: BACKLOG.md  BH-001-hard-benchmark.md  E0-001-epistemic-lifecycle-rewrite.md  LCV-001-sealed-lineage-runtime-closure.md  MM-009-causal-deformation-appearance-prediction.md  MM-011-lcv-backed-causal-deformation-appearance-prediction.md  P0-001-prediction-distribution-contract.md  P0-002-decomposed-surprise-and-skill-attribution.md  P0-003-learning-seam.md  P0-004-environment-protocol.md  P0-005-run-metrics-artifact.md  P0-006-gate-wiring-and-results.md  P0-007-gate-regression-ratchet.md  P0-008-knowledge-path-unification.md  P0-009-typing-enforcement-and-ci.md  P0-010-adr-0007-uncertainty-arbitration.md  P0-011-p6-codec-migration-strategy.md  P1-001-flat-world-model.md  P10-001-external-knowledge-through-codec.md  P10-002-external-source-trust-robustness.md  P11-001-compute-as-action-tools.md  P12-001-swappable-visual-perception.md  P13-001-learn-from-observation.md  P14-001-observe-repeat-imitation.md  P2-001-flat-planner.md  P2-002-composition-root.md  P3-001-voe-monitor.md  P3-002-curiosity-curriculum.md  P3-003-replay-buffer.md  P4-001-skill-router.md  P5-001-jumpy-option-model.md  P5-002-hierarchical-manager.md  P6-001-universal-codec.md  P7-001-continual-improvement.md  P8-001-knowledge-router.md  P8-002-provenance-trust-robustness.md  P9-001-integration-gate.md  P9-002-ablation-harness.md  P9-003-second-environment.md  P9-004-invariants-and-negative-controls.md  (+29 more)
tests/: test_ablation.py  test_agent.py  test_bench_hard.py  test_bridge_control.py  test_calibration.py  test_candidate_landscape_experiment.py  test_candidate_landscape_planner.py  test_codec.py  test_conformance.py  test_environment.py  test_epistemic_decision.py  test_epistemic_information.py  test_epistemic_maturity.py  test_epistemic_records.py  test_epistemic_runtime.py  test_epistemic_semantics.py  test_epistemic_storage.py  test_gates.py  test_imitation.py  test_invariants.py  test_knowledge.py  test_lcv001_custody.py  test_lcv001_experiment.py  test_lcv001_runtime.py  test_lcv001_supervisor.py  test_manager.py  test_materialize_artifact.py  test_memory.py  test_mm002_experiment.py  test_mm002_method.py  test_mm003_experiment.py  test_mm003_method.py  test_mm004_experiment.py  test_mm004_method.py  test_mm005_experiment.py  test_mm005_method.py  test_mm006_experiment.py  test_mm006_method.py  test_mm007_experiment.py  test_mm007_method.py  (+95 more)
tools/: materialize_artifact.py
(+327 files in other folders)
