[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prospect"
version = "0.0.1"
description = "Research scaffold for a predictive-world-model agent (surprise-driven, hierarchical, memory-augmented)."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]
# Learning backends are pulled in by the implementation, kept OUT of the core's
# required deps. numpy since P1-001; heavier backends (torch) only when an
# implementation actually needs them (minimal rule).
# Upper bound <2.5: the kill-gates are numerically calibrated, so numpy stays
# pinned to a reproducible range (a floating numpy can drift a tight gate
# threshold in CI). 2.5.0 also ships PEP 695 `type` stubs that mypy (targeting
# 3.11) rejects; 2.4.x stubs typecheck cleanly. Raise the bound only alongside a
# gate re-run and a mypy python_version bump.
learn = ["numpy>=1.26,<2.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/prospect"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I"]

# The typing rule (CLAUDE.md) is enforced, not hoped for (P0-009): protocol
# conformance is verified statically via tests/test_conformance.py.
[tool.mypy]
files = ["src/prospect", "bench", "tests"]
mypy_path = "src"
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
