[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prospect"
version = "0.0.1"
description = "Research scaffold for a predictive-world-model agent (surprise-driven, hierarchical, memory-augmented)."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]
# Learning backends are pulled in by the implementation, kept OUT of the core's
# required deps. numpy since P1-001; heavier backends (torch) only when an
# implementation actually needs them (minimal rule).
# Upper bound <2.5: the kill-gates are numerically calibrated, so numpy stays
# pinned to a reproducible range (a floating numpy can drift a tight gate
# threshold in CI). 2.5.0 also ships PEP 695 `type` stubs that mypy (targeting
# 3.11) rejects; 2.4.x stubs typecheck cleanly. Raise the bound only alongside a
# gate re-run and a mypy python_version bump.
learn = ["numpy>=1.26,<2.5"]
# Optional harder-benchmark tier (BH-001, ADR-0011): a real MuJoCo control task behind
# the `bench.Environment` seam. Deliberately kept OUT of `[dev,learn]` and the numpy CI
# — heavyweight, non-gated, run on demand via `make bench-hard`. State observations
# only, so no GL/render deps are needed.
bench-hard = ["mujoco>=3", "dm_control>=1.0"]
# Optional real-modality systems preflight (MM-001).  Frozen neural codecs stay
# harness-side per ADR-0009; ffmpeg is a host binary and is checked at runtime.
# `accelerate` is intentionally omitted: these tiny checkpoints load directly,
# avoiding another dependency for a non-gated local benchmark.
bench-multimodal = [
    "torch>=2.2,<3",
    "transformers>=4.57,<5",
    "diffusers>=0.35,<0.36",
    "snac>=1.2,<1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prospect"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I"]

# The typing rule (CLAUDE.md) is enforced, not hoped for (P0-009): protocol
# conformance is verified statically via tests/test_conformance.py.
[tool.mypy]
files = ["src/prospect", "bench", "tests", "tools"]
mypy_path = "src"
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

# The optional `[bench-hard]` deps ship no type stubs and are absent from the numpy
# CI, so mypy treats them as Any rather than erroring on the missing import. The
# adapter (bench/hard/) is still fully typed against our own contracts.
[[tool.mypy.overrides]]
module = ["dm_control.*", "mujoco.*"]
ignore_missing_imports = true
