[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prospect"
version = "0.0.1"
description = "Auditable linked-lifecycle runtime for adaptive predictive agents."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]
# Optional mature tensor/replay substrate. The domain, runtime, and exact
# epistemic reference evaluator remain standard-library only.
runtime = [
    "torch==2.9.0",
    "torchrl==0.13.3",
    "tensordict==0.13.0",
    "gymnasium==0.29.1",
    "jsonschema==4.25.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prospect", "bench"]
exclude = [
    "bench/**/__pycache__/**",
    "bench/world_model_lifecycle/results/**",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I"]

[tool.mypy]
files = ["src/prospect", "bench/epistemic", "tests/test_epistemic_*.py"]
mypy_path = "src"
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["gymnasium.*", "torch.*", "torchrl.*", "tensordict.*"]
ignore_missing_imports = true
